# Pulse

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  conanfile.txt
config/: config.hpp.in
src/: kalman.hpp  webcam.cpp
